Turbo frames post, CSS refactored, cards partial added

--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -1,172 +1,11 @@
 @import "../fonts/dm/dm.css";
 @import "../fonts/redhat/redhat.css";
 
-:root {
-  --body-background: rgb(var(--sl-color-neutral-50));
-  --body-color: rgb(var(--sl-color-neutral-700));
-  --body-size: 19px;
+@import "global.css";
+@import "shoelaced.css";
+@import "syntax.css";
 
-  --sl-font-sans: RedHatText, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  --display-sans: RedHatDisplay, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  --display-serif: DMSerif, Georgia, 'Times New Roman', serif;
-
-  --body-font-weight: 425;
-  --body-line-height: 1.5;
-
-  --color-dark-green: #14574E;
-  --color-dark-green-old: #0f5348;
-  --color-medium-green: #246e62;
-  --color-orange: #f47c3c;
-  --color-light-orange: #ff9359;
-  --color-brick: #C14849;
-
-  --sl-border-radius-medium: 0.35rem;
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes fadeInOut {
-  0% {
-    opacity: 0;
-  }
-  18% {
-    opacity: 1;
-  }
-  75% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-@keyframes swingBackAndForth {
-  0% {
-    transform: rotate(-7deg);
-  }
-  4.5% {
-    transform: rotate(-16deg);
-  }
-  11.5% {
-    transform: rotate(-7deg);
-  }
-  18% {
-    transform: rotate(-10deg);
-  }
-  25% {
-    transform: rotate(-7deg);
-  }
-  30% {
-    transform: rotate(-8deg);
-  }
-  37% {
-    transform: rotate(-7deg);
-  }
-}
-
-*[hidden] {
-  display: none;
-}
-
-html {
-  box-sizing: border-box;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-html {
-  -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
-  font-size: var(--body-size);
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  background: var(--body-background);
-  color: var(--body-color);
-  font-family: var(--sl-font-sans);
-  font-weight: var(--body-font-weight);
-  line-height: var(--body-line-height);
-}
-
-h1, h2, h3, h4, h5 {
-  font-family: var(--display-sans);
-  font-weight: 900;
-  letter-spacing: -0.01em;
-  margin-top: 0;
-  color: rgb(var(--sl-color-neutral-600));
-
-  &.serif {
-    font-family: var(--display-serif);
-    font-weight: 400;
-  }
-
-  &.colorful {
-    color: var(--color-dark-green);
-  }
-}
-
-h1 {
-  margin-top: 0;
-  font-size: 4em;
-  text-transform: uppercase;
-  text-shadow: 0px 2px 4px rgba(20, 0, 80, 0.7);
-  color: white;
-  opacity: 0.9;
-}
-
-h2 {
-  font-size: 3em;
-  line-height: 1.2;
-
-  @media (max-width: 499px) {
-    font-size: 2.5em;
-  }
-
-  &.serif {
-    font-size: 3.2em;
-
-    @media (max-width: 499px) {
-      font-size: 2.7em;
-    }
-  }
-}
-
-h3 {
-  font-size: 1.8em;
-}
-
-h1, h2, h3, nav, footer {
-  text-align: center;
-}
-
-p, ul, ol, blockquote {
-  margin-top: 0;
-  margin-bottom: 1.3em;
-}
-
-a {
-  color: var(--color-brick);
-  text-underline-offset: 0.15em;
-  text-decoration-color: var(--color-light-orange);
-}
-
-hr {
-  border: none;
-  border-top: 3px solid rgb(var(--sl-color-neutral-300));
-  margin: 2rem auto;
-}
-
-sl-button[type="success"][size="large"]::part(base) {
+/* sl-button[type="success"][size="large"]::part(base) {
   box-shadow: rgba(25, 150, 50, 0.35) 0px 20px 15px -15px;
   transition: all ease 0.25s;
 
@@ -174,647 +13,4 @@ sl-button[type="success"][size="large"]::part(base) {
     transform: translate(0, -6px);
     box-shadow: rgba(25, 150, 50, 0.35) 0px 23px 15px -15px;
   }
-}
-
-sl-dialog::part(title) {
-  font-weight: 575;
-}
-sl-dialog::part(footer) {
-  z-index: 100;
-}
-sl-dialog.scrollable {
-  &::part(footer) {
-    box-shadow: 0px -10px 20px rgba(0,0,0,0.1);
-  }
-}
-
-main {
-  margin: 0 0 4rem;
-}
-
-section-wrapper {
-  display: block;
-}
-
-section-wrapper[invert], footer {
-  background: rgb(var(--sl-color-neutral-900));
-  color: rgb(var(--sl-color-neutral-50));
-
-  & h2 {
-    color: var(--color-brick);
-  }
-
-  & a {
-    color: var(--color-orange);
-    text-decoration-color: var(--color-brick);
-  }
-}
-
-section {
-  padding: 2rem 0.75rem;
-  margin: 0 auto;
-  max-width: 65rem;
-
-  &.masonry {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-auto-rows: 0;
-    gap: 1.5rem;
-    max-width: 85rem;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-
-    @media (max-width: 1000px) {
-      grid-template-columns: 1fr 1fr;
-    }
-
-    @media (max-width: 650px) {
-      grid-template-columns: 1fr;
-
-      padding-left: 0.75rem;
-      padding-right: 0.75rem;
-    }
-  }
-
-  @media (min-width: 500px) {
-    padding: 2rem 3rem;
-  }
-
-  & ul, & ol {
-    margin-left: var(--sl-spacing-x-large);
-    margin-right: 0;
-    padding-left: 0;
-    padding-right: 0;
-
-    & > li {
-      margin: 0 0 var(--sl-spacing-small);
-
-      &:last-of-type {
-        margin-bottom: 0;
-      }
-    }
-  }
-  & ul {
-    list-style-type: square;
-  }
-}
-
-sl-dialog section {
-  padding: 0 !important;
-}
-
-header, header-background {
-  height: 42vw;
-}
-
-header-background {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 0;
-  overflow: hidden;
-
-  background: linear-gradient(#5F75A5, #796F7F);
-
-  & img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center 35%;
-  }
-}
-
-header-content {
-  display: block;
-  z-index: 1;
-  position: relative;
-  padding-top: 40px;
-  color: white;
-
-  & h2 {
-    position: absolute;
-    left: 50%;
-    margin: 0;
-    font-size: 1rem;
-    letter-spacing: 0;
-    transform: rotate(-7deg);
-    transform-origin: 99% 2%;
-    background: var(--color-orange);
-    color: white;
-    margin-left: 6.3rem;
-    padding: 0.25em 0.7em;
-    border-radius: 4px 2px 4px 4px;
-    top: 7.3rem;
-    box-shadow: 0px 11px 6px -7px rgba(0,0,0,0.15);
-    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-
-    animation: swingBackAndForth 8s;
-    animation-delay: 1s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
-  }
-}
-
-@media (max-width: 767px) {
-  header, header-background {
-    height: 60vw;
-  }
-
-
-  h1 {
-    font-size: 2.5em;
-  }
-
-  header-content {
-    padding-top: 30px;
-
-    & h2 {
-      margin-left: 3rem;
-      top: 5rem;
-      font-size: 0.9rem;
-    }
-  }
-}
-
-footer {
-  padding: 3rem 20px;
-}
-
-.fade-in-animation {
-  opacity: 0;
-  animation: fadeIn 2s 0.5s;
-  animation-fill-mode: forwards;
-}
-
-p.heading-icon {
-  text-align: center;
-  font-size: 250%;
-  margin-bottom: 0;
-  color: rgb(var(--sl-color-neutral-400));
-}
-
-section-wrapper[invert] p.heading-icon {
-  color: var(--color-medium-green);
-}
-
-sl-button a {
-  color: inherit;
-  text-decoration: none;
-}
-
-sl-card {
-  &::part(base) {
-    box-shadow: var(--sl-shadow-large);
-  }
-
-  & h3 {
-    margin-bottom: 0;
-  }
-}
-
-sl-card [slot="footer"] {
-  display: flex; 
-  justify-content: space-between; 
-  align-items: center;
-}
-
-sl-dialog {
-  &::part(panel) {
-    @media (max-width: 420px) {
-      max-height: 95vh;
-    }
-  }
-}
-
-p > a > sl-icon {
-  vertical-align: -0.18em;
-  margin-left: 0.2em;
-  margin-right: 0.2em;
-}
-
-code, pre {
-  -moz-osx-font-smoothing: auto;
-  -webkit-font-smoothing: auto;
-  font-family: ui-monospace,monospace;
-}
-
-code, pre {
-  background-color: #fcf9f0;
-  color: #6b2f39;
-  font-weight: normal;
-  padding: .25em .5em .25em;
-}
-
-p code, li code, blockquote code {
-  font-size: .875em;
-}
-
-div.highlight {
-  margin-top: 1.5em;
-  margin-bottom: 2em;
-  border: 1px dashed #f5d0d6;
-  box-shadow: 0px 13px 18px rgba(0, 0, 0, 0.1);
-}
-
-div.highlighter-rouge + div.highlighter-rouge > div.highlight {
-  margin-top: -0.75em;
-}
-
-pre.highlight {
-  margin-top: 0;
-  margin-bottom: 0;
-
-  font-weight: 400;
-  max-width: 100%;
-  overflow: auto;
-  padding: 0;
-
-  padding: 1.25em 0.8em;
-  white-space: pre;
-  word-wrap: normal;
-
-  background-color: #fcf9f0;
-  color: #272421;
-  font-size: 0.95em;
-}
-
-
-.highlight .hll {
-  background-color: #ffffcc;
-}
-
-.highlight .c {
-  color: #8f5902;
-}
-
-/* Comment */
-.highlight .err {
-  color: #a40000;
-}
-
-/* Error */
-.highlight .g {
-  color: #272421;
-}
-
-/* Generic */
-.highlight .k {
-  color: #204a87;
-  font-weight: 500;
-}
-
-/* Keyword */
-.highlight .l {
-  color: #272421;
-}
-
-/* Literal */
-.highlight .n {
-  color: #272421;
-}
-
-/* Name */
-.highlight .o {
-  color: #ce5c00;
-  font-weight: 500;
-}
-
-/* Operator */
-.highlight .x {
-  color: #272421;
-}
-
-/* Other */
-.highlight .p {
-  color: #272421;
-  font-weight: 500;
-}
-
-/* Punctuation */
-.highlight .cm {
-  color: #8f5902;
-}
-
-/* Comment.Multiline */
-.highlight .cp {
-  color: #8f5902;
-}
-
-/* Comment.Preproc */
-.highlight .c1 {
-  color: #8f5902;
-}
-
-/* Comment.Single */
-.highlight .cs {
-  color: #8f5902;
-}
-
-/* Comment.Special */
-.highlight .gd {
-  color: #a40000;
-}
-
-/* Generic.Deleted */
-.highlight .ge {
-  color: #272421;
-}
-
-/* Generic.Emph */
-.highlight .gr {
-  color: #ef2929;
-}
-
-/* Generic.Error */
-.highlight .gh {
-  color: #000080;
-  font-weight: 500;
-}
-
-/* Generic.Heading */
-.highlight .gi {
-  color: #00A000;
-}
-
-/* Generic.Inserted */
-.highlight .go {
-  color: #272421;
-}
-
-/* Generic.Output */
-.highlight .gp {
-  color: #8f5902;
-}
-
-/* Generic.Prompt */
-.highlight .gs {
-  color: #272421;
-  font-weight: 500;
-}
-
-/* Generic.Strong */
-.highlight .gu {
-  color: #800080;
-  font-weight: 500;
-}
-
-/* Generic.Subheading */
-.highlight .gt {
-  color: #a40000;
-  font-weight: 500;
-}
-
-/* Generic.Traceback */
-.highlight .kc {
-  color: #204a87;
-  font-weight: 500;
-}
-
-/* Keyword.Constant */
-.highlight .kd {
-  color: #204a87;
-  font-weight: 500;
-}
-
-/* Keyword.Declaration */
-.highlight .kn {
-  color: #204a87;
-  font-weight: 500;
-}
-
-/* Keyword.Namespace */
-.highlight .kp {
-  color: #204a87;
-  font-weight: 500;
-}
-
-/* Keyword.Pseudo */
-.highlight .kr {
-  color: #204a87;
-  font-weight: 500;
-}
-
-/* Keyword.Reserved */
-.highlight .kt {
-  color: #204a87;
-  font-weight: 500;
-}
-
-/* Keyword.Type */
-.highlight .ld {
-  color: #272421;
-}
-
-/* Literal.Date */
-.highlight .m {
-  color: #0000cf;
-  font-weight: 500;
-}
-
-/* Literal.Number */
-.highlight .s {
-  color: #4e9a06;
-}
-
-/* Literal.String */
-.highlight .na {
-  color: #8d8400;
-}
-
-/* Name.Attribute */
-.highlight .nb {
-  color: #204a87;
-}
-
-/* Name.Builtin */
-.highlight .nc {
-  color: #272421;
-}
-
-/* Name.Class */
-.highlight .no {
-  color: #272421;
-}
-
-/* Name.Constant */
-.highlight .nd {
-  color: #5c35cc;
-  font-weight: 500;
-}
-
-/* Name.Decorator */
-.highlight .ni {
-  color: #ce5c00;
-}
-
-/* Name.Entity */
-.highlight .ne {
-  color: #cc0000;
-  font-weight: 500;
-}
-
-/* Name.Exception */
-.highlight .nf {
-  color: #272421;
-}
-
-/* Name.Function */
-.highlight .nl {
-  color: #f57900;
-}
-
-/* Name.Label */
-.highlight .nn {
-  color: #272421;
-}
-
-/* Name.Namespace */
-.highlight .nx {
-  color: #272421;
-}
-
-/* Name.Other */
-.highlight .py {
-  color: #272421;
-}
-
-/* Name.Property */
-.highlight .nt {
-  color: #204a87;
-  font-weight: 500;
-}
-
-/* Name.Tag */
-.highlight .nv {
-  color: #272421;
-}
-
-/* Name.Variable */
-.highlight .ow {
-  color: #204a87;
-  font-weight: 500;
-}
-
-/* Operator.Word */
-.highlight .w {
-  color: #f8f8f8;
-  text-decoration: underline;
-}
-
-/* Text.Whitespace */
-.highlight .mf {
-  color: #0000cf;
-  font-weight: 500;
-}
-
-/* Literal.Number.Float */
-.highlight .mh {
-  color: #0000cf;
-  font-weight: 500;
-}
-
-/* Literal.Number.Hex */
-.highlight .mi {
-  color: #0000cf;
-  font-weight: 500;
-}
-
-/* Literal.Number.Integer */
-.highlight .mo {
-  color: #0000cf;
-  font-weight: 500;
-}
-
-/* Literal.Number.Oct */
-.highlight .sb {
-  color: #4e9a06;
-}
-
-/* Literal.String.Backtick */
-.highlight .sc {
-  color: #4e9a06;
-}
-
-/* Literal.String.Char */
-.highlight .sd {
-  color: #8f5902;
-}
-
-/* Literal.String.Doc */
-.highlight .s2 {
-  color: #4e9a06;
-}
-
-/* Literal.String.Double */
-.highlight .se {
-  color: #4e9a06;
-}
-
-/* Literal.String.Escape */
-.highlight .sh {
-  color: #4e9a06;
-}
-
-/* Literal.String.Heredoc */
-.highlight .si {
-  color: #4e9a06;
-}
-
-/* Literal.String.Interpol */
-.highlight .sx {
-  color: #4e9a06;
-}
-
-/* Literal.String.Other */
-.highlight .sr {
-  color: #4e9a06;
-}
-
-/* Literal.String.Regex */
-.highlight .s1 {
-  color: #4e9a06;
-}
-
-/* Literal.String.Single */
-.highlight .ss {
-  color: #4e9a06;
-}
-
-/* Literal.String.Symbol */
-.highlight .bp {
-  color: #3465a4;
-}
-
-/* Name.Builtin.Pseudo */
-.highlight .vc {
-  color: #272421;
-}
-
-/* Name.Variable.Class */
-.highlight .vg {
-  color: #272421;
-}
-
-/* Name.Variable.Global */
-.highlight .vi {
-  color: #272421;
-}
-
-/* Name.Variable.Instance */
-.highlight .il {
-  color: #0000cf;
-  font-weight: 500;
-}
-
-/* Literal.Number.Integer.Long */
-.language-liquid .highlight .p {
-  color: #8d8400;
-}
-.language-liquid .highlight .nv {
-  color: #204a87;
-}
-
+} */
