--- a/frontend/styles/shoelaced.css
+++ b/frontend/styles/shoelaced.css
@@ -16,17 +16,18 @@ sl-button {
 sl-card {
   &::part(base) {
     box-shadow: var(--sl-shadow-large);
+    border-top: 5px solid var(--sl-color-warning-300);
   }
 
   & h3 {
     margin-bottom: 0;
   }
-}
 
-sl-card [slot="footer"] {
-  display: flex; 
-  justify-content: space-between; 
-  align-items: center;
+  & [slot="footer"] {
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center;
+  }  
 }
 
 sl-dialog {
@@ -48,13 +49,6 @@ sl-dialog {
     box-shadow: 0px -10px 20px rgba(0,0,0,0.1);
   }
 }
-
-/* 
-sl-dialog.scrollable {
-  &::part(footer) {
-    box-shadow: 0px -10px 20px rgba(0,0,0,0.1);
-  }
-} */
 
 sl-spinner {
   font-size: 3rem;
