--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -126,7 +126,7 @@ h1 {
 
 h2 {
   font-size: 3em;
-  line-height: 1.2;
+  line-height: 1.15;
 
   @media (max-width: 499px) {
     font-size: 2.5em;
@@ -143,6 +143,7 @@ h2 {
 
 h3 {
   font-size: 1.8em;
+  line-height: 1.4;
 }
 
 h4 {
@@ -157,6 +158,7 @@ h1, h2, h3, nav, footer {
 p, ul, ol, blockquote {
   margin-top: 0;
   margin-bottom: 1.3em;
+  word-break: break-word;
 }
 
 a {
