Switch main JS entrypoint to Ruby2JS

--- a/src/_components/head.liquid
+++ b/src/_components/head.liquid
@@ -4,5 +4,5 @@
 {% seo %}
 
 <link rel="stylesheet" href="{% asset_path css %}" />
-<script src="{% asset_path js %}" defer></script>
+<script src="{% asset_path javascript/index.js.rb %}" defer></script>
 {% live_reload_dev_js %}
